# llvm2cryptoline

./: CMakeLists.txt  README.md
Spec_examples/NaCl/: fmonty.spec
Spec_examples/wolfssl/: curve25519.spec  fe_neg.spec
cmake/: CMakeLists.txt
condition_examples/: curve25519_fe51_add.txt  curve25519_fe51_mul121666.txt  curve25519_fe51_sq.txt  curve25519_fe51_sub.txt
condition_examples/NaCl/: fdifference_backwards.spec  fmul.txt  fscalar_product.txt  fsquare.spec  fsum.txt
condition_examples/wolfssl/: fe_add.txt  fe_mul.txt  fe_mul121666.txt  fe_neg.txt  fe_sq.spec  fe_sq.txt  fe_sq2.spec  fe_sq2.txt  fe_sub.txt
demonstration/: README.md  ecp_nistp224_felem_scalar.ll  ecp_nistp224_widefelem_scalar.ll  ecp_nistp224_widefelem_scalar_anno.ll  felem_scalar.spec  widefelem_scalar.spec
demonstration/FSE23_benchmark/: fully_automatic.sh  mimic_manual_modification.sh
examples/NaCl/: fdifference_backwards.ll  fdifference_backwards_auto.cl  fdifference_backwards_oldversion_tuned.cl  fdifference_backwards_tuned.cl  fmonty.ll  fmonty_fmonty_inline.cl  fmonty_no_inline.ll  fmonty_no_inline_fmonty_tuned.cl  fmul.ll  fmul_auto.cl  fmul_oldversion_tuned.cl  fmul_tuned.cl  fscalar_product.ll  fscalar_product_auto.cl  fscalar_product_oldversion_tuned.cl  fscalar_product_tuned.cl  fsquare.ll  fsquare_auto.cl  fsquare_oldversion_tuned.cl  fsum.ll  (+4 more)
grammar/: conditionLexer.g4  conditionParser.g4
src/: EvalVisitor.cpp  EvalVisitor.h  LegacyTranslator.cpp  LegacyTranslator.h  LegacyTypes.cpp  LegacyTypes.h  Translator.cpp  Translator.h  Types.cpp  Types.h  Utils.cpp  Utils.h  conditionLexer.cpp  conditionLexer.g4  conditionLexer.h  conditionLexer.interp  conditionParser.cpp  conditionParser.g4  conditionParser.h  conditionParser.interp  conditionParser.tokens  conditionParserBaseListener.cpp  conditionParserBaseListener.h  conditionParserBaseVisitor.cpp  conditionParserBaseVisitor.h  conditionParserListener.cpp  conditionParserListener.h  conditionParserVisitor.cpp  conditionParserVisitor.h  main.cpp  mytestLexer.cpp  mytestLexer.g4  mytestLexer.h  mytestLexer.interp  mytestLexer.tokens  mytestParser.cpp  mytestParser.g4  mytestParser.h  mytestParser.interp  mytestParserBaseListener.cpp  (+9 more)
test/: fully_automatic.sh  mimic_manual_modification.sh
(+262 files in other folders)
